--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
             <version>5.0.8.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
